2022-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/url.c (ReadURLImage): Deal with libxml2 not offering HTTP
        or FTP capabilities.  It seems that support for FTP has now been
        removed by default.

2022-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * README.txt: Recomend using JasPer 3.0.0 (or later).

        * VisualMagick/magick/magick_config.h.in: Disable building with
        bundled JasPer sources by default since the bundled sources are
        archaic.

        * coders/jp2.c: Fix compilation with JasPer 3.0.0 (which is now
        released).

2022-02-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/fx.c (ColorizeImagePixelsCB): Apply clipping and rounding
        to handle out of range values and provide the most accurate
        result.  Addresses SourceForge bug #662 "Broken -colorize".

2022-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (ReadJP2Image): Jasper 3.0.0 hid the functions we
        were using so switch back to using jas_image_decode(), but in a
        more secure way than before.

2022-01-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/download.rst: Document how to retrieve the PGP signing key
        from a key server.

2022-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (ReadJP2Image): Always use
        ThrowJP2ReaderException().  Should address oss-fuzz Issue 43979:
        "graphicsmagick:enhance_fuzzer: ASSERT: jas_get_ctx() ==
        jas_global.ctx".

2022-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * utilities/tests: Write compressed MIFF files to reduce disk
        space usage.

        * magick/command.c (CompareImageCommand): Support '-compress'
        option.

        * coders/mpc.c: Fix warnings from GCC 11.

        * coders/miff.c: Fix warnings from GCC 11.

2022-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
