@@ -37,9 +37,14 @@
 
 <p>2022-02-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
-* coders/url.c (ReadURLImage): Deal with libxml2 not offering HTTP
+<p>* coders/jpeg.c (ReadJPEGImage): Store embedded profiles in image,
+even if in 'ping' mode.  This addresses a problem discovered when
+interfacing with minimagick (Debian bug #1006374 &quot;graphicsmagick
+breaks ruby-mini-magick&quot;).</p>
+<p>* coders/url.c (ReadURLImage): Deal with libxml2 not offering HTTP
 or FTP capabilities.  It seems that support for FTP has now been
-removed by default.</blockquote>
+removed by default.</p>
+</blockquote>
 <p>2022-02-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* README.txt: Recomend using JasPer 3.0.0 (or later).</p>
